# study

./: README.md
CAS/: cas_queue.cpp
mysql连接池redis内存池/redis_client/: CMakeLists.txt  README.md  RedisDBInterface.cpp  RedisDBInterface.h  testRedisClient.cpp
protocol/: README.md
protocol/1-json/: README.md
protocol/1-json/cjson_test/: CMakeLists.txt  cJSON.c  cJSON.h  cjson_speed.c  person.json
protocol/1-json/jsoncpp_test/: CMakeLists.txt  jsoncpp_speed.cpp  ref.cpp
protocol/1-json/rapidjson_test/: CMakeLists.txt  rapidjson.cpp
protocol/2-protobuf/im_new/: IM.Login.proto  client.cc  server.cc
protocol/2-protobuf/myjob/: addressbook.pb.cc  addressbook.pb.h  addressbook.proto  main  main.cpp
protocol/2-protobuf/person/: code_test.cpp  pb_speed  pb_speed.cpp  test
protocol/2-protobuf/person/proto/: IM.Login.proto
protocol/3-security/tiny-AES-c/: test  test.c
protocol/3-security/xxtea/: xxtea.c
redis/: main.cpp
timer/: minheap.h  single_tw.c  test  timewheel.c
unicode_zlib/unicode/: READM.txt  charset_converter  charset_converter.c  utf8_to_utf16  utf8_to_utf16.c
unicode_zlib/unicode/CharsetConverter/: CharsetConverter  CharsetConverter.cpp  CharsetConverter.h  main.cpp
unicode_zlib/unicode/code-notepad/: ansi.txt  utf8-bom.txt  utf8.txt
unicode_zlib/unicode/iconv/: UTF-16.txt  UTF-32.txt  UTF-32BE.txt  UTF-32LE.txt  UTF16BE.txt  UTF16LE.txt
unicode_zlib/unicode/mysql/: utf8_tbl  utf8_tbl.c  utf8mb4_tbl  utf8mb4_tbl.c
unicode_zlib/unicode/nginx/: dump.rdb  index.html  unicode_utf8.conf
unicode_zlib/zlib/: zlib库安装.txt
unicode_zlib/zlib/1-huffman/: FileCompress.hpp  HuffmanTree.hpp  huffman  main.cpp  test.cpp.huffman  说明.txt
unicode_zlib/zlib/2-zlip/: DeflatingStream.cpp  DeflatingStream.h  InflatingStream.cpp  InflatingStream.h  deflate  deflate.cpp  inflate  inflate.cpp  test.cpp  test.cpp.glib  说明.txt
内存池/: mmpool.c
用户态协议栈/: icmp_arp_udp_success.c  ip_stack.c
